2007-07-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: Added support for suppressing page accounting
	  on a per-driver basis. Page accounting is deactivated if a line
	  "*FoomaticNoPageAccounting: True" is found in the PPD file.

2007-03-20  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: Performance improvement: Do not match all forms
	  of DSC comments against every line. Check whether the line is a
	  DSC comment at all and pass it quickly through if not (Thanks to
	  Andreas Bolsch, Andreas dot Bolsch at alumni dot TU-Berlin dot
	  DE, for this patch). Will probably fix Ubuntu bug LP#78781
	  (https://launchpad.net/bugs/78781).

	  Fixed bug of custom page sizes not read from the PostScript code
	  when the size values are in more than one line (as the
	  "imagetops" CUPS filter outputs them when adapting a
	  user-supplied custom page size to the aspect ratio of the image,
	  to not waste roll paper). This fixes CUPS STR #1722
	  (http://www.cups.org/str.php?L1722), Ubuntu bug LP#42234
	  (https://launchpad.net/bugs/42234).

	  Let data structure get written to debug log also if foomatic-rip
	  exits with an error (only in debug mode).

2007-03-10  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: Replaced sysread() and syswrite() by read() and
	  print() as sysread() and syswrite() is not compatible with the
	  read() and print() of the other operations. See Ubuntu bug #87597
	  (https://launchpad.net/bugs/87597).

2007-02-20  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-rip.in: Fixed problem of too high memory consumption
	  when binary output data of GhostScript is read line-wise and
	  does not contain line feeds (Ubuntu bug #85569 with driver
	  "eplaser", Red Hat bug #221194 with driver "lx5000"). Applied
	  same fix also to binary non-PostScript input data (only relevant
	  for non-CUPS printing systems).

	* README, USAGE, foomatic-rip.in, foomatic-rip.1.in, beh.in,